# nebula-terminal

./: .gitignore  Cargo.toml  LICENSE  README.md  app.vue  nuxt.config.ts  package.json  tailwind.config.js
.cursor/: context.md
.cursor/rules/: index.mdc
.output/: nitro.json
.output/public/: 200.html  404.html  _payload.json  index.html
.output/public/_nuxt/: BAedkeqD.js  B_kDPPro.js  BbCvn46i.js  BeGbB6ED.js  BikG4S-D.js  CG00PMz0.js  CMbZpcUd.js  CVsJad-5.js  Cbvfq5Q3.js  CxlNWY6j.js  Dg5bYs8d.js  DpQ_A1Nk.js  L-LBxDtd.js  OV7aMcy0.js  Q2k4uqbj.js  WqKyjtwa.js  entry.CcXuOnIF.css  entry.DLvBdJYa.css  entry.DsVvUu1I.css  h1AZEu16.js  ovVoHSaB.js
.output/public/_nuxt/builds/: latest.json
.output/public/_nuxt/builds/meta/: 405682ef-5ed8-47ef-b818-0d279f344042.json  9dd4dd82-4f26-41d3-8a81-925d6a60f535.json  ac443456-3405-4c6a-b1eb-cb50d3cc0144.json  b6244838-26f1-4bba-8320-a1e35e07edc5.json  ba801bb8-2844-4193-a75b-a77865d8e83c.json
.output/server/: package.json
.output/server/chunks/nitro/: nitro.mjs
.output/server/chunks/routes/: renderer.mjs
rules/: index.mdc
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
