[package]
name = "nebula-terminal"
version = "0.1.0"
description = "Nebula Terminal - A Tauri-based terminal application"
authors = ["Nebula Team"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[lib]
name = "nebula_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = "2.3.0"

[dependencies]
tauri = "2.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"] 